--- a/app/src/main/res/layout/fragment_pond_details.xml
+++ b/app/src/main/res/layout/fragment_pond_details.xml
@@ -135,7 +135,7 @@
     app:layout_constraintTop_toBottomOf="@+id/profile_layout"
     app:tabBackground="@null"
     app:tabGravity="fill"
-    app:tabIndicator="@drawable/tab_indicator"
+    app:tabIndicator="@drawable/tab_indicator2"
     app:tabIndicatorAnimationMode="elastic"
     app:tabIndicatorColor="@null"
     app:tabIndicatorGravity="stretch"
@@ -152,15 +152,5 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintHorizontal_bias="0.5"/>
-
-<ProgressBar
-    android:id="@+id/progressBar"
-    style="?android:attr/progressBarStyle"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
