--- a/app/src/main/res/layout/fragment_prefs.xml
+++ b/app/src/main/res/layout/fragment_prefs.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.settings.fragments.PrefsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Prefs" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/unavailable_feature"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        />
 
 </FrameLayout>
