--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,8 +41,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:text="@string/title_welcome_page"
-            android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textSize="26sp"
             android:textStyle="bold"
             android:alpha="0"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,8 +58,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:text="@string/message_welcome_page"
-            android:textColor="@color/navi"
-            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             android:alpha="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
